FIx bg color on mobile

--- a/_sass/classes.sass
+++ b/_sass/classes.sass
@@ -29,8 +29,7 @@
   .indexBody
     background-color:rgb(255,255,255)
     text-align:justify
-    margin:5px
-    padding:5px
+
 
 
 /* Landscape tablets and medium desktops */
